Migrate to xcode 8

--- a/PCSA/PCSA/Info.plist
+++ b/PCSA/PCSA/Info.plist
@@ -47,5 +47,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>Trying to retrieve contact photos</string>
 </dict>
 </plist>
